bug with phoneview on developer tools where if backout once from phoneview, whole page distorts

--- a/style.css
+++ b/style.css
@@ -797,14 +797,7 @@ cat-caption-box {
     font-size:x-small;
   }
 
-  .styledbox2-index {
-    
-    width:0 auto;
-    
-    
-   
-    
-  }
+  
 
   .pageheader {
     width:75%;
